yoshimi 2.1.0 rc1

2021-8-201Will
* Made guide headers HTML5 compliant.
* Applied corrections and style improvements from John.

2021-8-20 Will
* No code changes (so no version update).
* Revision of complete New User Guide.

2021-8-16 Will
* Set release candidate 1.

2021-8-15 Will
* Some small code cleanups.
* Added NRPN control to send part to system effects.
* Updated guide.

2021-8-14 Will
* Bugfix: MIDI_Learn not loading/saving files.
  Not handling spaces in path or leafname.
* Various doc updates.

2021-8-13 Will
* Expanded EQ Band, Type, Stages labels.
  Why were they ever abbreviated?
* Bugfix: Virtual keyboard not seen on first startup.

2021-8-12 Will
* Doc updates.
* Changed Banks ID placeholder.
  May be using it soon.

2021-8-10 Will
* Further Guide updates and improvements.
  Also some doc cleanups.

2021-8-9 Will
* Changed FR to RR in CLI LFO to resolve contention.
* Various guide updates and wc3 compliance checks.

2021-8-8 Will
* Util cleanups.

2021-8-7 Will
* Added an appendix to guide.
* Added a MIDI note lit generator in Utils.
* Removed now redundant similar information from docs.
* Removed PDF version of guide.
  The on-line copy is now referred to.

2021-8-6 Will
* Improved manual's CC/NRPN descriptions.
* Clarified guide text in navigation.
* Added more links.

2021-8-5 Will
* Improved reporting when loading manual.
* NRPN send system effect No. to No. now works!
  Undated manual accordingly.

2021-8-4 Will
* User guide more detail and cross links.

* Various Doc updates.
* Made string to int conversion safe.
* Activated search for new manual.
* Developed way to auto update manual version.

2021-8-3 Will
* User guide corrections and improvements.

2021-8-2 Will
* Further work on User Guide.

* Changed filer from fixed array to vector.

2021-8-1 Will
* Revised console window code.
  text size independent of dimensions.
* Updated user guide.

* Reverted part of config change from 2021-7-25
  One line error.