@@ -13,6 +13,7 @@ Csaba Erdei
 James Fraser
 Will Godfrey
 Stefaan Himpe
+Art Horan
 Alexander Hirsch
 Jeremy Jongepier
 Iain King-Speir
@@ -27,6 +28,7 @@ Marco Uibo
 Matthew McGuire
 Thomas Mitterfellner
 Lieven Moors
+John Murphy
 Harry Nakos
 Iurie Nistor
 Stephen Parry
