@@ -88,7 +88,9 @@ set the correct version number. -->
     <p>
     <small>Writing this user guide was a collaborative effort by the following:
     <br>
-    Kristian&nbsp;Amlie, Will&nbsp;Godfrey, Art&nbsp;Horan, Lorenzo&nbsp;Sutton, Hermann&nbsp;Voßeler.</small>
+    Kristian&nbsp;Amlie, Will&nbsp;Godfrey, Art&nbsp;Horan, John&nbsp;Murphy, Lorenzo&nbsp;Sutton, Hermann&nbsp;Voßeler.
+    <br>
+    With thanks for comments/suggestions from others.</small>
     </p>
   </body>
 </html>
